# itsm-agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  sql_app.db  verify_models_agg.py
alembic/: env.py
alembic/versions/: 045dfc6da1ea_update_analysis_result_updated_at_.py  0cafa427d5c5_initial_migration.py  27bb1d6d46e3_drop_all_tables.py  31e74ef5e9d4_add_risk_level_to_evaluation_run.py  4d9e1c0a276c_add_owner_repo_pr_number.py  54b7e804654d_add_compliance_tables.py  5f0b7f3e6d62_change_status_to_string.py  6bf4a4ed2b7b_convert_risk_level_enum_to_varchar.py  98d381fc7074_remove_pg_notify_trigger.py  b0d44836e7d2_add_evaluation_notify_trigger.py  cd05480c53c2_add_risk_level_to_analysis_result.py  e59ec2f572f3_add_evaluation_run_and_analysis_result_.py
app/: main.py
app/api/: api_v1.py
app/core/: broadcast.py  cache_updater.py  config.py  evaluation_cache.py  http_client.py  lifespan.py  llm.py  logging.py  pg_listen.py  runtime.py  security.py  valkey_pubsub.py
app/db/: database.py  session.py
app/dependencies/: database.py  http.py  services.py
app/integrations/: __init__.py
app/models/: __init__.py  evaluation_run.py  pr_snapshot.py  pull_request.py  run_state.py
app/routers/: home.py
app/schemas/: __init__.py  (+3 more)
docs/: ISO 20000.md  SETUP_GUIDE.md  aggregated_spec.md  policy.yaml
tests/: conftest.py  test_cache.py  test_evaluations.py  test_github_auth.py  test_github_client.py  test_jira_client.py  test_nodes.py  test_security.py  test_webhook_service.py
(+64 files in other folders)
