[project]
name = "itsm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.4",
    "fastapi>=0.124.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "sse-starlette>=3.2.0",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.38.0",
    "valkey>=6.1.1",
]
